# mcsr-ranked-api-rs

./: Cargo.toml  LICENSE.txt  README.md
examples/e01_user/: Cargo.toml
examples/e01_user/src/: main.rs
src/: helpers.rs  lib.rs  request_tests.rs
src/achievement/: mod.rs  tests.rs
src/achievment/: mod.rs  tests.rs
src/game/: mod.rs  requests.rs  tests.rs
src/game/versus/: mod.rs  requests.rs  tests.rs
src/helpers/: mod.rs  ser_str.rs  tests.rs
src/leaderboard/: mod.rs  requests.rs
src/leaderboard/elo/: mod.rs  requests.rs  tests.rs
src/leaderboard/game/: mod.rs  requests.rs  tests.rs
src/leaderboard/phase/: mod.rs  requests.rs  tests.rs
src/pagination/: mod.rs  tests.rs
src/types/: mod.rs  tests.rs
src/user/: identifier.rs  info.rs  mod.rs  requests.rs  role_type.rs  tests.rs
src/user/info/: all_seasons.rs  mod.rs
src/variations/: mod.rs  tests.rs
src/weekly_race/: mod.rs  requests.rs  result.rs  tests.rs
