[package]
name = "mcsr-ranked-api"
version = "0.1.0"
edition = "2021"

[lib]
name = "mcsr_ranked_api"
path = "src/lib.rs"

[features]
default = ["achievements", "matches", "weekly_races"]
achievements = []
matches = []
weekly_races = []
leaderboards = []
blocking = []
all = ["achievements", "matches", "weekly_races", "blocking", "leaderboards"]

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_qs = "0.13.0"
serde_repr = "0.1.19"
uuid = { version = "1.12.0", features = ["serde"] }
