[package]
name = "mcsr-ranked-api"
version = "0.5.1"
edition = "2021"
description = "MCSR Ranked API wrapper in Rust"
license-file = "LICENSE.txt"
repository = "https://github.com/LeSaRXD/mcsr-ranked-api-rs"
readme = "README.md"

[lib]
name = "mcsr_ranked_api"
path = "src/lib.rs"

[features]
default = ["achievements", "matches", "weekly_races"]
achievements = []
matches = []
weekly_races = []
leaderboards = []
blocking = []
serialize = []
variations = ["matches"]
all = [
	"achievements",
	"matches",
	"weekly_races",
	"blocking",
	"leaderboards",
	"serialize",
	"variations",
]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
serde_repr = "0.1.20"
uuid = { version = "1.16.0", features = ["serde"] }
